Opened 15 years ago
Closed 14 years ago
#4489 closed bug (fixed)
Changing the Plain Font to anything but Deja Vu Sans Book causes Terminal to use that font and not the fixed width font
Reported by: | leavengood | Owned by: | jackburton |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Terminal | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
The subject says it all.
To reproduce open the Font preferences, change the Plain Font to something that is not Deja Vu Sans Book, then either open Terminal or open a new Terminal window if it is already running. It will be using that font and not the fixed width font, which causes strange display and prompt issues (which is really another issue with Terminal and non-fixed width fonts.)
The Terminal preferences still shows the font as Deja Vu Sans Mono.
This can be fixed for alpha2 and I will probably investigate it.
Note:
See TracTickets
for help on using tickets.
Actually the font needs to be a different DejaVu Sans font (such as Condensed or ExtraLight) for this to happen, not just any other font. I imagine Terminal is doing some checking that involves the prefix DejaVu Sans.