Fix for bug #4489. Terminal wasn't using the saved font style, only the font family. Moreover, it defaulted to be_plain_font, instead of be_fixed_font.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33945 a95241bf-73f2-0310-859d-f6bbb57e9c96